[gd_scene load_steps=8 format=3 uid="uid://ck8vat18dkjdp"]

[ext_resource type="Script" path="res://scripts/levelButton.gd" id="1_2uwq0"]
[ext_resource type="Texture2D" uid="uid://cokq7n5a8cwxe" path="res://resources/grayStar.png" id="1_6qwqr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0rnlh"]
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="LabelSettings" id="LabelSettings_7wpnw"]
font_size = 30
font_color = Color(0, 0, 0, 1)
outline_size = 10

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_w402h"]
texture = ExtResource("1_6qwqr")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_vvgt5"]
load_path = "res://.godot/imported/fullStar.png-169e85095bc3846a06970b9e99920ed2.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_akjis"]
texture = SubResource("CompressedTexture2D_vvgt5")

[node name="levelButton" type="Button"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -620.0
offset_bottom = -1180.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_0rnlh")
script = ExtResource("1_2uwq0")

[node name="label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "1"
label_settings = SubResource("LabelSettings_7wpnw")
horizontal_alignment = 1

[node name="starLine3" type="Panel" parent="."]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.75
anchor_top = 0.75
anchor_right = 0.75
anchor_bottom = 0.75
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_w402h")

[node name="starLine2" type="Panel" parent="."]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.75
anchor_right = 0.5
anchor_bottom = 0.75
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_w402h")

[node name="starLine1" type="Panel" parent="."]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.75
anchor_right = 0.25
anchor_bottom = 0.75
offset_left = -15.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_w402h")

[node name="star3" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.75
anchor_top = 0.75
anchor_right = 0.75
anchor_bottom = 0.75
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_akjis")

[node name="star2" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.75
anchor_right = 0.5
anchor_bottom = 0.75
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_akjis")

[node name="star1" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.75
anchor_right = 0.25
anchor_bottom = 0.75
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_akjis")
