extends Button


func setStar(starNum):
    match starNum:
        0:
            pass
        1:
            $star1.visible = true
        2:
            $star1.visible = true
            $star2.visible = true
        3:
            $star1.visible = true
            $star2.visible = true
            $star3.visible = true
        4:
            $star1.visible = true
            $star2.visible = true
            $star3.visible = true












            
            
            
